# sfshowlist

./: .gitignore  Application.hs  README.md  sf_show_list.cabal
SfShowList/: Auth.hs  Common.hs
SfShowList/Controllers/: Admin.hs  Shows.hs
SfShowList/Models/: Show.hs  Venue.hs
db/: schema.sql
db/migrations/: 20131114215909_create_shows.hs  20131124153209_create_admins.hs
mockup/: mockup.html
static/css/: main.css
templates/: main.html
views/: edit.html  index.html  login.html  new.html
views/invites/: create.html  index.html
