name:                SfShowList
version:             0.0.0.0
--author:              YOUR NAME
--maintainer:          your@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable sf_show_list
  main-is: Main.hs
  ghc-options: -threaded -O2 -Wall
  build-depends:
    base
    , aeson
    , transformers
    , postgresql-orm
    , simple >= 0.6.0
    , simple-postgresql-orm
    , simple-session
    , simple-templates
    , text
    , time
    , vector
    , wai
    , wai-extra
    , warp
    , postgresql-simple

